# zher

./: .gitignore  README.md  README_cn.md  build.bat  build.sh
.cargo/: config.toml
.github/workflows/: build.yml
backend/: Cargo.toml  build.rs
backend/src/: desktop.rs  discovery.rs  handlers.rs  lib.rs  main.rs  state.rs  utils.rs  ws.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: AppHeader.vue  ChatMessages.vue  MessageInput.vue  MobileUserModal.vue  QRCodeView.vue  SettingsView.vue  UserListView.vue  UserPanel.vue  ZipProgressModal.vue
frontend/src/composables/: useChat.js  useFileTransfer.js  useMessageActions.js  useQRCode.js  useSocket.js  useTheme.js  useUI.js  useUserActions.js
frontend/src/constants/: index.js
frontend/src/services/: storageService.js
frontend/src/utils/: fileUtils.js
