[package]
name = "zher"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
socketioxide = { version = "0.14", features = ["state"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
serde_bytes = "0.11"
tokio-stream = "0.1.17"
futures = "0.3.31"
uuid = { version = "1.18.1", features = ["v4"] }
bytes = "1.11.0"
urlencoding = "2.1.3"
rust-embed = "8.9.0"
mime_guess = "2.0.5"
